News
====

.. contents::

svn trunk
---------

* Fixes `#1457145: Fails on URLs with port numbers
  <http://sourceforge.net/tracker/index.php?func=detail&aid=1457145&group_id=91231&atid=596416>`_

0.6
---

* ``String(min=1)`` implies ``not_empty`` (which seems more intuitive)

* Added ``list_char`` and ``dict_char`` arguments to
  ``Invalid.unpack_errors`` (passed through to ``variable_encode``)

* Added a ``use_datetime`` option to ``TimeValidator``, which will
  cause it to use ``datetime.time`` objects instead of tuples.  It was
  previously able to consume but not produce these objects.

* Added ``<form:iferror name="not field_name">`` when you want to
  include text only when a field has no errors.

* There was a problem installing 0.5.1 on Windows with Python 2.5, now
  resolved.

0.5.1
-----

* Fixed compound validators and ``not_empty`` (was breaking
  SQLObject's PickleCol)

0.5
---

* Added ``htmlfill.default_formatter_dict``, and you can poke new
  formatters in there to effective register them.

* Added an ``escapenl`` formatter (nl=newline) that escapes HTML and
  turns newlines into ``<br>``.

* When ``not_empty=False``, empty is assumed to be allowed.  Thus
  ``Int().to_python(None)`` will now return ``None``.

0.4
---

* Fixed up all the documentation.

* Validator ``__doc__`` attributes will include some
  automatically-appended information about all the message strings
  that validator uses.

* Deprecated ``formencode.htmlform`` module, because it is dumb.

* Added an ``.all_messages()`` method to all validators, primarily
  intended to be used for documentation purposes.

* Changed preferred name of ``StringBoolean`` to ``StringBool`` (to go
  with ``bool`` and ``validators.Bool``).  Old alias still available.

* Added ``today_or_after`` option to ``validators.DateValidator``.

* Added a ``validators.FileUploadKeeper`` validator for helping with
  file uploads in failed forms.  It still requires some annoying